hphp/hack/test/typecheck/inout/bad_inout_use_lvalue4.php.exp
File "bad_inout_use_lvalue4.php", line 10, characters 11-32:
You cannot decorate this argument as `inout` (Parsing[1002])
File "bad_inout_use_lvalue4.php", line 4, characters 9-25:
Please add a type hint (Naming[2035])
